Changed title and added description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: Skill of Living
+description: Musings on the mystery of existence, life, and a few ideas for getting "better" at it.
+show_downloads: false
